# mcp-tekna

./: .dockerignore  .env.example  .gitignore  .mcp.dev.json  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  glama.json  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docker-build.yml  publish-pypi.yml  release.yml
.specify/memory/: constitution.md
mcpb/: .mcpbignore  manifest.json
scripts/: bump_version.py
specs/001-tekna-data-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tekna-data-tools/checklists/: requirements.md
specs/001-tekna-data-tools/contracts/: mcp-tools.md
specs/002-plugin-distribution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-plugin-distribution/checklists/: requirements.md
specs/002-plugin-distribution/contracts/: manifest-contracts.md
specs/004-pypi-publish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-pypi-publish/checklists/: requirements.md
specs/005-readonly-tool-annotations/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mcp_tekna/: __main__.py  benefits.py  cache.py  events.py  models.py  news.py  server.py  tekna_client.py
tests/: conftest.py  test_annotations.py  test_benefits.py  test_cache.py  test_events.py  test_manifests.py  test_news.py  test_server.py
tests/fixtures/: benefits_page.html  events_response.json  news_response.json
(+1 files in other folders)
